# Mathdatawork

./: README.md  run_backend.bat
backend/: pom.xml
backend/src/main/java/com/word/: MathdataApplication.java
backend/src/main/java/com/word/cache/: AiDictationMemoryDb.java
backend/src/main/java/com/word/controller/: SysUserController.java
backend/src/main/java/com/word/entity/: DictationDetail.java  DictationRecord.java  QuestionBank.java  QuestionCategory.java  SysMenu.java  SysRole.java  SysRoleMenu.java  SysUser.java  SysUserRole.java
backend/src/main/java/com/word/mapper/: SysUserMapper.java
backend/src/main/java/com/word/service/: OxfordDictionaryService.java  SysUserService.java
backend/src/main/java/com/word/service/impl/: SysUserServiceImpl.java
backend/src/main/resources/: application.yml
backend/src/main/resources/mapper/: SysUserMapper.xml
backend_cpp/: CMakeLists.txt  main.cpp
db/: schema.sql  v2_advanced_features.sql  v3_database_engineering_upgrade.sql
docs/: database_highlights.md  db_optimization.md  memory_db_and_dm.md  project_report.md  video_script.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: theme.css
frontend/src/components/: AiAssistant.vue
frontend/src/router/: index.js
frontend/src/views/: AIDictation.vue  Admin.vue  ErrorLibrary.vue  HardWordLibrary.vue  Honors.vue  Profile.vue  Register.vue  ToBeMemorizedLibrary.vue  WordPractice.vue  WordRecitation.vue
